--- a/app.json
+++ b/app.json
@@ -1,26 +1,32 @@
 {
   "pages": [
-    "pages/login/login",
     "pages/submission/submission",
-    "pages/search/search",
+    "pages/login/login",
     "pages/index/index",
+    "pages/search/search",
     "pages/logs/logs"
   ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarTitleText": "尚维婚礼策划订单工具",
     "navigationBarTextStyle": "black"
   },
   "tabBar": {
+    "color": "#999",
+    "selectedColor": "#1aad19",
     "list": [
       {
         "pagePath": "pages/submission/submission",
-        "text": "提交订单"
+        "text": "提交订单",
+        "iconPath": "./images/send.png",
+        "selectedIconPath": "./images/send2.png"
       },
       {
         "pagePath": "pages/search/search",
-        "text": "查询订单"
+        "text": "查询订单",
+        "iconPath": "./images/scan.png",
+        "selectedIconPath": "./images/scan2.png"
       }
     ]
   }
