--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "shangwei weApp server",
   "main": "app.js",
   "scripts": {
+	"dev": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
